update contract and api
